fix: enhance payment summary retrieval by using dynamic time series keys